refatored ParkingSessionService and implemented HATEOAS at parkingSession and parkingLot